--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,5 +2,5 @@
   <h1 class="project-name">{{ site.title }}</h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
   <a href="#" class="btn">View on GitHub</a>
-  <img src="/images/cover.jpg" width="430" alt="cover">
+  <img src="/images/cover.png" width="430" alt="cover">
 </section>
