--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  {% include head.html %}
+  <!-- Header -->
+  <div id="header">
+      <div class="container">
+          <!-- Logo -->
+
+          <!--<h1><a href="#" id="logo">{{ page.title }}</a></h1>-->
+
+          <h1><a href="{{ site.baseurl }}/index.html" id="logo">Natacha Chenevoy's Homepage</a></h1>
+          <!--<h1><a href="{{ site.baseurl }}/home.html" id="logo">7-11 Sept, York, UK.</a></h1>-->
+
+          {% include nav.html %}
+
+      </div>
+  </div>
 
   <body>
 
