--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,58 @@ body {
     width: 70%;
 }
 
+/* Header */
+
+#header {
+    /* background: #222222; */
+    background: #6ca0e8;
+    /* Show the header image: */
+    /*background: #333333 url("../images/head_image.jpg") no-repeat;*/
+    background-size: cover;
+    color: #fff;
+    padding: 1em;
+    text-align: center;
+    background-position: 0% 65%;
+    position: relative;
+}
+
+    #header:before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(16, 32, 48, 0.25);
+    }
+
+    #header > * {
+        position: relative;
+        z-index: 1;
+    }
+
+.homepage #header {
+    padding: 8em 0;
+    background-position: center;
+}
+
+header.major {
+    padding-bottom: 1em;
+}
+
+header h2 {
+    margin: 0;
+    padding: 0;
+    font-size: 3em;
+    font-weight: 600;
+}
+
+header .byline {
+    font-size: 1.6em;
+}
+
+
+/* Nav */
 #nav > ul {
     margin: 0;
 }
