--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <!-- Header -->
-  <div id="header">
-      <div class="container">
-          <!-- Logo -->
+  <head>
+		<title>{{ page.title }}</title>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-          <!--<h1><a href="#" id="logo">{{ page.title }}</a></h1>-->
-
-          <h1><a href="{{ site.baseurl }}/index.html" id="logo">Natacha Chenevoy's Homepage</a></h1>
-          <!--<h1><a href="{{ site.baseurl }}/home.html" id="logo">7-11 Sept, York, UK.</a></h1>-->
-
-          {% include nav.html %}
-
-      </div>
-  </div>
-
+			<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css" />
+		</noscript>
+		<!--[if lte IE 8]><link rel="stylesheet" href="{{ site.baseurl }}/assets/css/ie/v8.css" /><![endif]-->
+	</head>
+  
   <body>
+    <!-- Header -->
+    <div id="header">
+        <div class="container">
+            <!-- Logo -->
+
+            <!--<h1><a href="#" id="logo">{{ page.title }}</a></h1>-->
+
+            <h1><a href="{{ site.baseurl }}/index.html" id="logo">Natacha Chenevoy's Homepage</a></h1>
+            <!--<h1><a href="{{ site.baseurl }}/home.html" id="logo">7-11 Sept, York, UK.</a></h1>-->
+
+            {% include nav.html %}
+
+        </div>
+    </div>
+
+  
 
     {% include header.html %}
 
