--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ body {
 #header {
     /* background: #6ca0e8;
     /* Show the header image: */
-    background: #333333 url("../images/cover.png") no-repeat;*/
+    background: url("../images/cover.png") no-repeat;*/
     background-size: cover;
     color: #fff;
     padding: 1em;
