--- a/css/main.css
+++ b/css/main.css
@@ -7,11 +7,11 @@ body {
 
 
 #header {
-    /* background: #6ca0e8;
+    /* background: #6ca0e8; */
     /* Show the header image: */
-    background: url("./images/cover.png") no-repeat;*/
+    background: url("./images/cover.png") no-repeat;
     background-size: cover;
-    color: #fff;
+    /* color: #fff;*/
     padding: 1em;
     text-align: center;
     background-position: 0% 65%;
