--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
     /* Show the header image: */
     background-image: url("/images/cover.png");
     background-size: cover;
-    /* color: #fff;*/
+     color: #fff;
     padding: 1em;
     text-align: center;
     background-position: 0% 65%;
