--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-		/* <title>{{ page.title }}</title> */
+		<!-- <title>{{ page.title }}</title> -->
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 			<link rel="stylesheet" href="{{ site.baseurl }}../css/main.css" />
