--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,7 @@ header .byline {
 
 a {
     text-decoration: none;
-    color: #999;
+    color: #fff;
 }
 a:hover {
     text-decoration: underline;
