--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,6 @@ body p {
     line-height: 1em;
     color: #333;
 }
-footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
-}
 
 ul.posts { 
     margin: 20px auto 40px; 
@@ -34,10 +30,12 @@ body li {
 
 a {
     text-decoration: none;
-    
 }
 a:hover {
     text-decoration: underline;
+}
+a:visited {
+    color: #333
 }
 
 
@@ -140,4 +138,10 @@ header .byline {
             display: none;
         }
 
+
+
+footer {
+    border-top: 1px solid #d5d5d5;
+    font-size: .8em;
+}
 
