--- a/css/main.css
+++ b/css/main.css
@@ -31,10 +31,12 @@ body li {
 a {
     text-decoration: none;
 }
-a:hover {
+
+body a:hover {
     text-decoration: underline;
 }
-a:visited {
+
+body a:visited {
     color: #333
 }
 
