--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,11 @@
         <div class="container">
             <!-- Logo -->
 
-            <!--<h1><a href="#" id="logo">{{ page.title }}</a></h1>-->
+            <!--<h1><a href="#" id="logo">{{ page.title }}</a></h1>
 
-            <h1><a href="{{ site.baseurl }}/index.html" id="logo">Natacha Chenevoy's Homepage</a></h1>
+	<h1><a href="{{ site.baseurl }}/index.html" id="logo">Natacha Chenevoy's Homepage</a></h1>-->
+
+            <h1>Natacha Chenevoy's Homepage</h1>
 
             {% include nav.html %}
 
