--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,12 +30,10 @@
             
             <!--  <li {% if current[1] == 'index.html' %}class='active'{% endif %}><a href="{{ site.baseurl }}/index.html">Home</a></li> -->
             
-			<li {% if current[1] == 'publications.html' %}class='active'{% endif %}><a href="{{ site.baseurl }}/publications.html">Publications</a></li>
+			<li {% if current[1] == 'index.html' %}class='active'{% endif %}><a href="{{ site.baseurl }}/index.html">About me</a></li>
 
-            <li {% if current[1] == 'research.html' %}class='active'{% endif %}><a href="{{ site.baseurl }}/research.html">Research Projects</a></li>
-            
-            <li {% if current[1] == 'teaching.html' %}class='active'{% endif %}><a href="{{ site.baseurl }}/teaching.html">Teaching</a></li>
-            
+            <li {% if current[1] == 'projects.html' %}class='active'{% endif %}><a href="{{ site.baseurl }}/projects.html">Projects</a></li>
+           
 			<li {% if current[1] == 'cv.html' %}class='active'{% endif %}><a href="{{ site.baseurl }}/cv.html">CV</a></li>
 			
             <li {% if current[1] == 'blog.html' %}class='active'{% endif %}><a href="{{ site.baseurl }}/blog.html">Blog</a></li>
@@ -44,7 +42,7 @@
             
             <li style="align:right;"><a href="{{ site.baseurl }}/feed.xml" title="Subscribe (RSS)"><span class="fa fa-rss-square"></span></a></li>
             
-            <li style="align:right;"><a href="https://github.com/nickmalleson/" title="GitHub"><span class="fa fa-github-square"></span></a></li>
+            <li style="align:right;"><a href="https://github.com/mednche/" title="GitHub"><span class="fa fa-github-square"></span></a></li>
             
             <li style="align:right;"><a href="https://twitter.com/nickmalleson" title="Twitter"><span class="fa fa-twitter-square"></span></a></li>
             
