--- a/css/main.css
+++ b/css/main.css
@@ -135,8 +135,8 @@ header .byline {
 
             #nav > ul > li.active a {
                 /* color: white; */
-                /* color: #6ca0e8; */
-                color: black;
+                color: #6ca0e8;
+                /*color: black;
             }
 
         #nav > ul > li > ul {
