--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,16 +1,56 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
 
-<article class="post">
-  <h1>{{ page.title }}</h1>
+  <head>
+		<!-- <title>{{ page.title }}</title> -->
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-  <div class="entry">
-    {{ content }}
-  </div>
+			<link rel="stylesheet" href="{{ site.baseurl }}../css/main.css" />
+		</noscript>
+		
+	</head>
+  
+  <body>
+    <!-- Header -->
+    <div id="header">
+        <div class="container">
+            <!-- Logo -->
 
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
+            <!--<h1><a href="#" id="logo">{{ page.title }}</a></h1>
+	<h1><a href="{{ site.baseurl }}/index.html" id="logo">Natacha Chenevoy's Homepage</a></h1>-->
 
-</article>
+            <h1>Natacha Chenevoy's Homepage</h1>
+
+            {% include nav.html %}
+
+        </div>
+    </div>
+
+
+    <section class="main-content">
+      <div class="wrapper">
+        
+        <article class="post">
+          <h1>{{ page.title }}</h1>
+
+          <div class="entry">
+            {{ content }}
+          </div>
+
+          <div class="date">
+            Written on {{ page.date | date: "%B %e, %Y" }}
+          </div>
+
+        </article>
+
+        
+        
+      </div>
+    </div>
+
+    {% include footer.html %}
+
+
+  </body>
+</html>
+
