--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@ header .byline {
             #nav > ul > li.active a {
                 /* color: white; */
                 color: #6ca0e8;
-                /*color: black;
+                /*color: black;/*
             }
 
         #nav > ul > li > ul {
