--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -11,6 +11,7 @@
 	</head>
   
   <body>
+	  
     <!-- Header -->
     <div id="header">
         <div class="container">
@@ -28,9 +29,38 @@
 
 
     <section class="main-content">
-      <div class="wrapper">
-        
-        <article class="post">
+	<div class="post-teaser">
+		
+		{% if post.thumbnail %} 
+	     	<div class="post-img">
+			<img src="{{ site.baseurl }}/{{ post.thumbnail }}">
+	      	</div>
+	      	{% endif %}
+	      	<span>
+		  <header>
+		    <h1>
+		      <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
+			{{ post.title }}
+		      </a>
+		    </h1>
+		    <p class="meta">
+		      {{ post.date | date: "%B %-d, %Y" }}
+		    </p>
+		  </header>
+		  <div class="excerpt">
+		      {{ post.excerpt | strip_html | escape }}
+		    <!--{{ post.content | strip_html | truncate: "250" }}-->
+		    <!--<a class="button" href="{{ post.url | prepend: site.baseurl }}">
+		      {{ site.theme_settings.str_continue_reading }}
+		    </a>-->
+		  </div>
+	      </span>
+	    </div>
+	      
+	      
+	      
+	      
+        /*<article class="post">
           <h1>{{ page.title }}</h1>
 
           <div class="entry">
@@ -41,7 +71,7 @@
             Written on {{ page.date | date: "%B %e, %Y" }}
           </div>
 
-        </article>
+        </article>*/
 
         
         
