--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -59,8 +59,8 @@
 	      
 	      
 	      
-	      
-        /*<article class="post">
+	 <!--     
+        <article class="post">
           <h1>{{ page.title }}</h1>
 
           <div class="entry">
@@ -71,7 +71,7 @@
             Written on {{ page.date | date: "%B %e, %Y" }}
           </div>
 
-        </article>*/
+        </article>-->
 
         
         
