--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -28,7 +28,7 @@
 <div class="post-teaser">
 	{% if post.thumbnail %} 
 	<div class="post-img">
-		<img src="{{ site.baseurl }}/{{ post.thumbnail }}">
+		<img src="{{ site.baseurl }}{{ post.thumbnail }}">
 	</div>
 	{% endif %}
 	<span>
