--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -25,32 +25,9 @@
         </div>
     </div>
 	  
-<div class="post-teaser">
-	{% if post.thumbnail %} 
-	<div class="post-img">
-		<img src="{{ site.baseurl }}{{ post.thumbnail }}">
-	</div>
-	{% endif %}
-	<span>
-		<header>
-		    <h1>
-		      <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
-			{{ post.title }}
-		      </a>
-		    </h1>
-		    <p class="meta">
-		      {{ post.date | date: "%B %-d, %Y" }}
-		    </p>
-		  </header>
-		  <div class="excerpt">
-		      {{ post.excerpt | strip_html | escape }}
-		  </div>
-	</span>
-</div>
-	      
+
   
-	 <!--     
-        <article class="post">
+<article class="post">
           <h1>{{ page.title }}</h1>
 
           <div class="entry">
@@ -61,7 +38,7 @@
             Written on {{ page.date | date: "%B %e, %Y" }}
           </div>
 
-        </article>-->
+ </article>
 
     {% include footer.html %}
 
