--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-	  <!-- <title>{{ page.title }}</title> -->
-	  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	  <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" />
-	  </noscript>
-</head>
+  <head>
+		<!-- <title>{{ page.title }}</title> -->
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+
+			<link rel="stylesheet" href="{{ site.baseurl }}/css/main.css" />
+		</noscript>
+		
+	</head>
   
- <body>
-	  
- <!-- Header -->
+  <body>
+    <!-- Header -->
     <div id="header">
         <div class="container">
             <!-- Logo -->
@@ -24,10 +25,12 @@
 
         </div>
     </div>
-	  
 
-  
-<article class="post">
+
+    <section class="main-content">
+      <div class="wrapper">
+        
+        <article class="post">
           <h1>{{ page.title }}</h1>
 
           <div class="entry">
@@ -38,11 +41,15 @@
             Written on {{ page.date | date: "%B %e, %Y" }}
           </div>
 
- </article>
+        </article>
+
+        
+        
+      </div>
+    </div>
 
     {% include footer.html %}
 
 
-</body>
+  </body>
 </html>
-
