--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,13 @@ body a:visited {
     color: #333
 }
 
-
+#teaser img {
+    padding: 0;
+    display: block;
+    margin: 0 auto;
+    max-height: 10%;
+    max-width: 100%;
+}
 
 /* Header */
 #header {
