--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body {
     margin: 60px auto;
     width: 70%;
     font-family: Futura,Trebuchet MS,Arial,sans-serif;
+    backrgound: #FFEFD5;
 }
 
 h1 {
