--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 60px auto;
     width: 70%;
-    font-family: Futura,Trebuchet MS,Arial,sans-serif;
+    font-family: Fjord One; 
     backrgound: #FFEFD5;
 }
 
