--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,12 @@ body li {
     color: #333;
     margin: 0 0 3px 0;}
 
+body ol {
+    font-size: 1.4em;
+    line-height: 1em;
+    color: #333;
+    margin: 0 0 3px 0;}
+
 a {
     text-decoration: none;
     color: #333
