--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@ body p {
     color: #333;
 }
 
+body code {
+    font-size: 1.4em;
+}
+
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
