--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,9 @@
 
 			<link rel="stylesheet" href="{{ site.baseurl }}../css/main.css" />
 		</noscript>
+	{% seo %}
 		
-	</head>
+</head>
   
   <body>
     <!-- Header -->
