--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,14 @@ a:hover {
     text-decoration: underline;
 }
 
+.row {
+  display: flex;
+}
+
+.column {
+  flex: 33.33%;
+  padding: 5px;
+}
 
 .excerpt {
     font-size: 1.4em;
