--- a/css/main.css
+++ b/css/main.css
@@ -42,11 +42,11 @@ body ol {
 
 a {
     text-decoration: none;
-    color: #04B486
+    color: #266E73
 }
 
 a:hover {
-    color:#04B486;
+    color:#266E73;
     text-decoration: underline;
 }
 
