--- a/css/main.css
+++ b/css/main.css
@@ -50,11 +50,27 @@ a:hover {
     text-decoration: underline;
 }
 
+
 .excerpt {
     font-size: 1.4em;
     line-height: 1em;
     color: #333;
 }
+
+.column {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.excerpt::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+
 
 .post-teaser p {
     font-size: 1.6em;
