--- a/css/main.css
+++ b/css/main.css
@@ -55,21 +55,13 @@ a:hover {
     font-size: 1.4em;
     line-height: 1em;
     color: #333;
+    display: flex;
 }
 
 .column {
-  float: left;
-  width: 50%;
+  flex: 50%;
   padding: 5px;
 }
-
-/* Clear floats after image containers */
-.excerpt::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
 
 
 .post-teaser p {
