--- a/css/main.css
+++ b/css/main.css
@@ -55,12 +55,10 @@ a:hover {
     font-size: 1.4em;
     line-height: 1em;
     color: #333;
-    display: flex;
 }
 
 .column {
-  flex: 50%;
-  padding: 5px;
+  float:left;
 }
 
 
