--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,28 +5,36 @@
 		<!-- <title>{{ page.title }}</title> -->
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-			<link rel="stylesheet" href="{{ site.baseurl }}../css/main.css" />
+			<link rel="stylesheet" href="{{ site.baseurl }}../css/main2.css" />
 		</noscript>
 	{% seo %}
 		
 </head>
   
   <body>
-    <!-- Header -->
-    <div id="header">
-        <div class="container">
-            <!-- Logo -->
+	  
+	  		<!-- Header -->
+			<header id="header">
+				<div class="inner">
+					<a href="#" class="image avatar"><img src="images/photo.png" alt="" /></a>
+					<h1><strong>Data Science &</strong><br />
+					<strong>Criminology</strong><br />
+					PhD student at<br />
+					<a href="https://essl.leeds.ac.uk/law/pgr/830/natacha-chenevoy">University of Leeds</a>.
+					</h1>
+				</div>
+			</header>
 
-            <!--<h1><a href="#" id="logo">{{ page.title }}</a></h1>
 
-	<h1><a href="{{ site.baseurl }}/index.html" id="logo">Natacha Chenevoy's Homepage</a></h1>-->
+		<!-- Main -->
+			<div id="main">
+				<nav id="nav-menu">
+					<ul>
+						<li><a href="https://mednche.github.io/blog.html">Blog</a></li>
+						<li><a href="https://mednche.github.io">Home</a></li>
+					</ul>
+				</nav>
 
-            <h1>Natacha Chenevoy's Homepage</h1>
-
-            {% include nav.html %}
-
-        </div>
-    </div>
 
 
     <section class="main-content">
