--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,15 +35,10 @@
 					</ul>
 				</nav>
 
-
-
-    <section class="main-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-
-    {% include footer.html %}
+	<section id="One">
+		{{ content }}
+		{% include footer.html %}
+	</section>
 
 
   </body>
