--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,10 +35,15 @@
 					</ul>
 				</nav>
 
-	<section id="One">
-		{{ content }}
-		{% include footer.html %}
-	</section>
+<section class="main-content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </div>
+
+    {% include footer.html %}
+				
+</section>
 
 
   </body>
