--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,39 +11,41 @@
 		
 </head>
   
-  <body>
+ <body>
 	  
-	  		<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/photo.png" alt="" /></a>
-					<h1><strong>Data Science &</strong><br />
-					<strong>Criminology</strong><br />
-					PhD student at<br />
-					<a href="https://essl.leeds.ac.uk/law/pgr/830/natacha-chenevoy">University of Leeds</a>.
-					</h1>
-				</div>
-			</header>
+	<!-- Left header -->
+	<header id="header">
+		<div class="inner">
+			<a href="#" class="image avatar"><img src="images/photo.png" alt="" /></a>
+			<h1><strong>Data Science &</strong><br />
+			<strong>Criminology</strong><br />
+			PhD student at<br />
+			<a href="https://essl.leeds.ac.uk/law/pgr/830/natacha-chenevoy">University of Leeds</a>.
+			</h1>
+		</div>
+	</header>
 
 
-		<!-- Main -->
-			<div id="main">
-				<nav id="nav-menu">
-					<ul>
-						<li><a href="https://mednche.github.io/blog.html">Blog</a></li>
-						<li><a href="https://mednche.github.io">Home</a></li>
-					</ul>
-				</nav>
+	<!-- Main -->
+	<div id="main">
+		<!-- Menu -->
+		<nav id="nav-menu">
+			<ul>
+				<li><a href="https://mednche.github.io/blog.html">Blog</a></li>
+				<li><a href="https://mednche.github.io">Home</a></li>
+			</ul>
+		</nav>
 
-<section class="main-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+		<!-- Content -->
+		<section class="main-content">
+			<div class="wrapper">
+				{{ content }}
+			</div>
+		</section>
+		
+	</div>
 
     {% include footer.html %}
 				
-</section>
-
-
   </body>
 </html>
