--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 		<!-- Menu -->
 		<nav id="nav-menu">
 			<ul>
-				<li><a href="https://mednche.github.io/blog.html">Blog</a></li>
+				<li><a href="https://mednche.github.io/blog.html">Projects</a></li>
 				<li><a href="https://mednche.github.io">Home</a></li>
 			</ul>
 		</nav>
