--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="images/photo.png" alt="" /></a>
 			<h1><strong>Data Science &</strong><br />
-			<strong>Criminology</strong><br />
+			<strong>Criminology</strong><br>
 			PhD student at<br />
 			<a href="https://essl.leeds.ac.uk/law/pgr/830/natacha-chenevoy">University of Leeds</a>.
 			</h1>
