--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -15,7 +15,7 @@
 	<!-- Left header -->
 	<header id="header">
 		<div class="inner">
-			<a href="#" class="image avatar"><img src="../images/photo.png" alt="" /></a>
+			<a href="#" class="image avatar"><img src="/images/photo.png" alt="" /></a>
 			<h1><strong>Data Science &</strong><br />
 			<strong>Criminology</strong><br>
 			PhD student at<br />
