--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -53,9 +53,11 @@
 			</div>
 		</section>
 		
+		
+		{% include footer.md %}
 	</div>
 
-    {% include footer.html %}
+    
 				
   </body>
 </html>
