--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,11 @@
-<section class="page-header">
-  <h1 class="project-name">{{ site.title }}</h1>
-  <h2 class="project-tagline">{{ site.tagline }}</h2>
-</section>
+<!-- Left header -->
+	<header id="header">
+		<div class="inner">
+			<a href="#" class="image avatar"><img src="images/photo.png" alt="" /></a>
+			<h1><strong>Data Science &</strong><br />
+			<strong>Criminology</strong><br>
+			PhD student at<br />
+			<a href="https://essl.leeds.ac.uk/law/pgr/830/natacha-chenevoy">University of Leeds</a>.
+			</h1>
+		</div>
+	</header>
