--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -13,27 +13,13 @@
 <body>
 	  
 	<!-- Left header -->
-	<header id="header">
-		<div class="inner">
-			<a href="#" class="image avatar"><img src="/images/photo.png" alt="" /></a>
-			<h1><strong>Data Science &</strong><br />
-			<strong>Criminology</strong><br>
-			PhD student at<br />
-			<a href="https://essl.leeds.ac.uk/law/pgr/830/natacha-chenevoy">University of Leeds</a>.
-			</h1>
-		</div>
-	</header>
+	{% include header.html %}
 
 
 	<!-- Main -->
 	<div id="main">
 		<!-- Menu -->
-		<nav id="nav-menu">
-			<ul>
-				<li><a href="https://mednche.github.io/blog.html">Projects</a></li>
-				<li><a href="https://mednche.github.io">Home</a></li>
-			</ul>
-		</nav>
+		{% include nav.html %}
 
 		<!-- Content -->
 		<section class="main-content">
@@ -53,7 +39,7 @@
 			</div>
 		</section>
 		
-		<hr>
+		<!-- Get in touch -->
     		{% include footer.html %}
 		
 	</div>
