--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -42,9 +42,13 @@
 		<!-- Get in touch -->
     		{% include footer.html %}
 		
+		
+	
+		<!-- Contact-->
+		{% include contact.html %}
 	</div>
 	
-	{% include contact.html %}
+	
 	
   </body>
 </html>
