--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,3 +20,5 @@
 		</ul>
 	</div>
 </div>
+
+<p style="font-size: 60%; text-align: right;">blog built using the <a href="https://github.com/jasonlong/cayman-theme">cayman-theme</a> by <a href="https://github.com/jasonlong">Jason Long</a>. <a href="http://creativecommons.org/licenses/by/4.0/">LICENSE</a></p>
