--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -26,6 +26,11 @@
 			<div class="wrapper">
 				<article class="post">
 				  <h1>{{ page.title }}</h1>
+					
+				<p align="center">
+					{{ page.feature-img }}
+				</p>
+
 
 				  <div class="entry">
 				    {{ content }}
