--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -32,7 +32,7 @@
 					{{ page.teaser}}
 					
 					<p align="center">
-						{{ page.feature-img }}
+						<img src={{ page.feature-img }}>
 					</p>
 					
 				    	{{ content }}
