--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,9 @@
 <!-- Footer right pannel-->
+</br>
+
 <hr>
+
+</br>
 
 <h2>Get In Touch</h2>
 
@@ -15,7 +19,7 @@
 			</li>
 			<li>
 				<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-				<a href="mailto:mednche@leeds.ac.uk">mednche@leeds.ac.uk</a>
+				<a href="mailto:mednche@leeds.ac.uk">n.chenevoy@leeds.ac.uk</a>
 			</li>
 		</ul>
 	</div>
