--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -2022,6 +2022,12 @@
 		}
 
 /* Image */
+
+	img {
+	    max-width: 100%;
+	    max-height: 100%;
+	}
+
 	.image_logo { 
 		float: left;
 		margin-right: 10px; 
