--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -33,9 +33,9 @@
 					
 					</br>
 					
-					<p align="center">
-						<img src={{ page.feature-img }}>
-					</p>
+					
+						<img class="image figure" src="{{ page.feature-img }}">
+					
 					
 				    	{{ content }}
 				  </div>
