--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -27,18 +27,13 @@
 				<article class="post">
 				  <h1>{{ page.title }}</h1>
 					
-				<div class="entry">
-					
 					{{ page.teaser}}
 					
 					</br>
 					
-					
-					<img class="image figure" src="{{ page.feature-img }}">
-					
+					<img class="figure" src="{{ page.feature-img }}">
 					
 				    	{{ content }}
-				  </div>
 
 				  <div class="date">
 				    Written on {{ page.date | date: "%B %e, %Y" }}
