--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,8 @@
 <!-- Menu -->
 <nav id="nav-menu">
 	<ul>
-		<li><a href="https://mednche.github.io/blog.html">Projects</a></li>
 		<li><a href="https://mednche.github.io">Home</a></li>
+		<li><a href="https://mednche.github.io/projects.html">Projects</a></li>
+		<li><a href="https://mednche.github.io/blog.html">Blog</a></li>
 	</ul>
 </nav>
