--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -2,7 +2,7 @@
 <footer id="footer">
 	<div class="inner">
 		<ul class="icons">
-			<li><a href="https://scholar.google.co.uk/citations?user=ltmGyokAAAAJ&hl=de" class="icon fa-graduation-cap"><span class="label">Google Scholar</span></a></li>
+			<li><a href="https://scholar.google.com/citations?user=ey3GepEAAAAJ&hl=en&oi=ao" class="icon fa-graduation-cap"><span class="label">Google Scholar</span></a></li>
 			<li><a href="https://twitter.com/NatachaChenevoy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 			<li><a href="https://github.com/mednche" class="icon fa-github"><span class="label">Github</span></a></li>
 			<li><a href="https://www.linkedin.com/in/natacha-chenevoy-66622692/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
