--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -25,7 +25,7 @@
 		<section class="main-content">
 			<div class="wrapper">
 				<article class="post">
-				  <h1>{{ page.title }}</h1>
+				  <h1>{{ page.big-title }}</h1>
 					
 					</br>
 					
