--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,7 @@
 	<header id="header">
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="/images/photo.png" alt="" /></a>
-			<h1><strong>Data Science &</strong><br />
-			<strong>Criminology</strong><br>
+			<h1><strong>Data Science & Crime Analytics</strong><br />
 			PhD student at<br />
 			<a href="https://essl.leeds.ac.uk/law/pgr/830/natacha-chenevoy">University of Leeds</a>.
 			</h1>
