--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,7 @@
 		<div class="inner">
 			<a href="#" class="image avatar"><img src="/images/photo.png" alt="" /></a>
 			<h1><strong>Data Science & Crime Analytics</strong><br />
-			PhD student at<br />
-			<a href="https://essl.leeds.ac.uk/law/pgr/830/natacha-chenevoy">University of Leeds</a>.
+			PhD student at <a href="https://essl.leeds.ac.uk/law/pgr/830/natacha-chenevoy">University of Leeds</a>.
 			</h1>
 		</div>
 	</header>
