--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -2,6 +2,21 @@
 layout: default
 ---
 
-<ul>{% for tag in site.tags %} 
-  <li><a href="/tag/{{ tag[0] }}">{{ tag[0] }}</a> <span>{{ tag[1].size }}</span></li>{% endfor %}
+<h2 class="post_title">{{page.title}}</h2>
+<ul>
+  {% for post in site.posts %}
+  {% for tag in post.tags %}
+  {% if tag == page.tag %}
+  <li class="archive_list">
+    <time style="color:#666;font-size:11px;" datetime=''>{{post.date | date: "%m/%d/%y"}}</time> <a class="archive_list_article_link" href=''>{{post.title}}</a>
+    <p class="summary">{{post.summary}}</p>
+    <ul class="tag_list">
+      {% for tag in post.tags %}
+      <li class="inline archive_list"><a class="tag_list_link" href="/tag/">{{ tag }}</a></li>
+      {% endfor %}
+    </ul>
+  </li>
+  {% endif %}
+  {% endfor %}
+  {% endfor %}
 </ul>
