--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -27,6 +27,12 @@
 				<article class="post">
 				  <h1>{{ page.big-title }}</h1>
 					
+					<ul class="tags">
+					  {% for tag in page.tags %}
+					    <li><a href="/tags#{{ tag }}" class="tag">{{ tag }}</a></li>
+					  {% endfor %}
+					</ul>
+					
 					</br>
 					
 					<img class="figure" src="{{ page.feature-img }}">
