--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -27,7 +27,7 @@
 				<article class="post">
 				  <h1>{{ page.big-title }}</h1>
 					
-					{{ page.teaser}}
+					{{ page.intro}}
 					
 					</br>
 					
